--- a/packages/nx-nest/src/schematics/microservice-provider/files/tsconfig.json
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/tsconfig.json
@@ -1,10 +1,4 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": ".",
-    "baseUrl": "."
-  },
-  "include": ["src", "test"],
-  "exclude": ["node_modules"]
+  "compilerOptions": {}
 }
