--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -37,11 +37,11 @@
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "0.1202.5",
-    "@angular-devkit/core": "12.2.5",
-    "@angular-devkit/schematics": "12.2.5",
-    "@nrwl/cli": "^13.2.1",
-    "@nrwl/devkit": "^13.2.1",
+    "@angular-devkit/architect": "^0.1300.3",
+    "@angular-devkit/core": "^13.0.3",
+    "@angular-devkit/schematics": "^13.0.3",
+    "@nrwl/cli": "^13.2.2",
+    "@nrwl/devkit": "^13.2.2",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "change-case": "^4.1.2",
@@ -53,7 +53,7 @@
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
     "glob": "^7.2.0",
-    "listr2": "^3.13.4",
+    "listr2": "^3.13.5",
     "micromatch": "^4.0.4",
     "nunjucks": "^3.2.3",
     "picomatch": "^2.3.0",
