--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -39,12 +39,12 @@
     "@webundsoehne/nx-builders": "*"
   },
   "dependencies": {
-    "@angular-devkit/schematics": "12.1.2",
+    "@angular-devkit/schematics": "^13.0.3",
     "@nestjs/schematics": "^8.0.5",
     "@webundsoehne/nx-builders": "*",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
-    "listr2": "^3.13.4"
+    "listr2": "^3.13.5"
   }
 }
