--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -35,12 +35,12 @@
     "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "dependencies": {
-    "@angular-devkit/core": "12.1.2",
-    "@angular-devkit/schematics": "12.1.2",
-    "@nrwl/devkit": "^13.2.1",
-    "@nrwl/workspace": "^13.2.1",
+    "@angular-devkit/core": "^13.0.3",
+    "@angular-devkit/schematics": "^13.0.3",
+    "@nrwl/devkit": "^13.2.2",
+    "@nrwl/workspace": "^13.2.2",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
-    "listr2": "^3.13.4"
+    "listr2": "^3.13.5"
   }
 }
