fix: update seed injection

--- a/packages/nestjs-keycloak-seeder/tsconfig.json
+++ b/packages/nestjs-keycloak-seeder/tsconfig.json
@@ -10,7 +10,7 @@
       "@decorators/*": ["decorators/*"],
       "@interfaces/*": ["interfaces/*"],
       "@utils/*": ["utils/*"],
-      "@modules/*": ["modules/*"]
+      "@module/*": ["module/*"]
     }
   },
   "include": ["src"],
