--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,16 +72,18 @@ publish:
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: 'false'
-    PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
-    PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
-    PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
+    # PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
+    # PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
+    # PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
     # npm_config_loglevel: verbose
     # PLUGIN_NPM_TOKEN: $NPM_WS_TOKEN
+    NPM_RC: $NPM_RC
     DRONE_REPO_BRANCH: $CI_COMMIT_REF_NAME
   before_script:
     - apk add --no-cache --no-progress rsync
     - rsync -a $CI_PROJECT_DIR/ /drone/src/
     - cd /drone/src
+    - echo -e "${NPM_RC}" > .npmrc
   script:
     - /semantic-release/release.sh
   after_script:
