--- a/packages/patch-package/package.json
+++ b/packages/patch-package/package.json
@@ -72,6 +72,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.5",
+    "@oclif/plugin-help": "^5.1.10",
     "fs-extra": "^10.0.0",
     "globby": "^11.0.3",
     "listr2": "^3.12.1",
