--- a/packages/nx-nest/tsconfig.json
+++ b/packages/nx-nest/tsconfig.json
@@ -8,6 +8,8 @@
     "paths": {
       "@src/*": ["*"],
       "@utils/*": ["utils/*"],
+      "@integration/*": ["integration/*"],
+      "@schematics/*": ["schematics/*"],
       "@interfaces/*": ["interfaces/*"]
     }
   },
