--- a/packages/nx-tools/tsconfig.json
+++ b/packages/nx-tools/tsconfig.json
@@ -7,13 +7,13 @@
     "baseUrl": "src",
     "paths": {
       "@src/*": ["*"],
-      "@init/*": ["init/*"],
       "@constants/*": ["constants/*"],
       "@integration/*": ["integration/*"],
       "@interfaces/*": ["interfaces/*"],
       "@rules/*": ["rules/*"],
       "@schematics/*": ["schematics/*"],
       "@templates/*": ["templates/*"],
+      "@tasks/*": ["tasks/*"],
       "@utils": ["utils/index"],
       "@utils/*": ["utils/*"]
     }
