--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -73,6 +73,7 @@
     "@oclif/errors": "^1.3.5",
     "@oclif/plugin-help": "^5.1.10",
     "@webundsoehne/nx-tools": "*",
+    "@webundsoehne/deep-merge": "*",
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
