--- a/packages/nx-nest/.eslintrc
+++ b/packages/nx-nest/.eslintrc
@@ -6,23 +6,11 @@
       {
         "pathGroups": [
           {
-            "pattern": "@src/**",
+            "pattern": "@{webundsoehne,webundsoehne-private,src,interfaces,integration,schematics,utils}/**",
             "group": "index"
           },
           {
-            "pattern": "@interfaces/**",
-            "group": "index"
-          },
-          {
-            "pattern": "@utils/**",
-            "group": "index"
-          },
-          {
-            "pattern": "@webundsoehne/**",
-            "group": "index"
-          },
-          {
-            "pattern": "@webundsoehne-private/**",
+            "pattern": "@{src,interfaces,integration,schematics,utils}",
             "group": "index"
           }
         ],
