--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -31,8 +31,13 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
@@ -43,12 +48,12 @@
     "typescript": ">= 3.9.0"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1300.3",
-    "@angular-devkit/core": "^13.0.3",
-    "@angular-devkit/schematics": "^13.0.3",
-    "@nrwl/cli": "^13.2.2",
-    "@webundsoehne/nx-tools": "*",
+    "@angular-devkit/architect": "^0.1301.3",
+    "@angular-devkit/core": "^13.1.3",
+    "@angular-devkit/schematics": "^13.1.3",
+    "@nrwl/cli": "^13.4.4",
     "@webundsoehne/deep-merge": "*",
+    "@webundsoehne/nx-tools": "*",
     "delay": "^5.0.0",
     "execa": "^5.1.1",
     "tree-kill": "^1.2.2"
