--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -31,21 +31,26 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
     "@webundsoehne/nx-builders": "*"
   },
   "dependencies": {
-    "@angular-devkit/schematics": "^13.0.3",
+    "@angular-devkit/schematics": "^13.1.3",
     "@nestjs/schematics": "^8.0.5",
-    "@webundsoehne/nx-builders": "*",
     "@webundsoehne/deep-merge": "*",
+    "@webundsoehne/nx-builders": "*",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
     "execa": "^5.1.1",
-    "listr2": "^3.13.5"
+    "listr2": "^4.0.1"
   }
 }
