--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -31,16 +31,21 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "dependencies": {
-    "@angular-devkit/core": "^13.0.3",
-    "@angular-devkit/schematics": "^13.0.3",
-    "@nrwl/devkit": "^13.2.2",
-    "@nrwl/workspace": "^13.2.2",
+    "@angular-devkit/core": "^13.1.3",
+    "@angular-devkit/schematics": "^13.1.3",
+    "@nrwl/devkit": "^13.4.4",
+    "@nrwl/workspace": "^13.4.4",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
-    "listr2": "^3.13.5"
+    "listr2": "^4.0.1"
   }
 }
