--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "yarn run command build --concurrency 1 --include-dependencies",
     "link-packages": "lerna link --force-local",
     "lint": "yarn command --concurrency 1 lint",
-    "lint:check": "yarn command --parallel lint:check",
+    "lint:check": "yarn command --parallel --no-bail lint:check",
     "lint:staged": "yarn command --concurrency 1 lint:staged",
     "scripts:link": "./scripts/link-packages.sh link",
     "scripts:unlink": "./scripts/link-packages.sh unlink",
