fix: templating issues

--- a/packages/nx-workspace/src/schematics/workspace/files/tsconfig.json
+++ b/packages/nx-workspace/src/schematics/workspace/files/tsconfig.json
@@ -1,20 +1,17 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "es2018",
-    "lib": ["es2018", "ESNext", "dom"],
-    "removeComments": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "target": "ES2021",
+    "lib": ["ES2021", "ESNext", "DOM"],
     "sourceMap": false,
     "declaration": false,
+    "removeComments": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
     "importHelpers": true,
     "noUnusedLocals": false,
     "incremental": false,
-    "strictNullChecks": true,
     "rootDir": ".",
     "baseUrl": "."
   },
