--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "docs:jsdoc": "yarn command --no-bail docs:jsdoc"
   },
   "workspaces": {
-    "packages": ["packages/*"],
+    "packages": [
+      "packages/*"
+    ],
     "nohoist": []
   },
   "simple-git-hooks": {
@@ -49,8 +51,8 @@
     "simple-git-hooks": "^2.7.0",
     "tsc-watch": "^4.6.0",
     "tsconfig-replace-paths": "^0.0.11",
-    "typedoc": "^0.22.10",
-    "typedoc-plugin-markdown": "^3.11.11",
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-markdown": "^3.11.12",
     "typescript": "^4.5.4"
   },
   "config": {
