--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -33,26 +33,14 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
-  "files": [
-    "bin/",
-    "config/",
-    "dist/",
-    "templates/"
-  ],
+  "files": ["bin/", "config/", "dist/", "templates/"],
   "oclif": {
     "commands": "./dist/commands",
     "bin": "brownie",
-    "plugins": [
-      "@oclif/plugin-help"
-    ],
+    "plugins": ["@oclif/plugin-help"],
     "hooks": {
       "init": "./dist/hooks/init.hook",
       "command_not_found": "./dist/hooks/not-found.hook",
@@ -62,10 +50,7 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "keywords": [
-    "oclif",
-    "brownie"
-  ],
+  "keywords": ["oclif", "brownie"],
   "dependencies": {
     "@cenk1cenk2/boilerplate-oclif": "^1.10.6",
     "@oclif/command": "^1.8.16",
@@ -91,7 +76,7 @@
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^17.0.8",
+    "@types/node": "^17.0.10",
     "@types/through": "^0.0.30",
     "@types/update-notifier": "^5.0.1",
     "source-map-support": "^0.5.21"
