--- a/packages/nestjs-keycloak/package.json
+++ b/packages/nestjs-keycloak/package.json
@@ -10,10 +10,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "keywords": [
-    "nestjs",
-    "keycloak"
-  ],
+  "keywords": ["nestjs", "keycloak"],
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
     "build": "tsc -p tsconfig.build.json",
@@ -33,13 +30,8 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "engines": {
     "node": ">=12.0.0"
@@ -51,7 +43,7 @@
     "@nestjs/core": "^8.2.5",
     "@nestjs/graphql": "^9.0.4",
     "express": "^4.17.2",
-    "fastify": "^3.25.3",
+    "fastify": "^3.26.0",
     "graphql": "^15",
     "keycloak-connect": "^16.1.0"
   },
