--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -30,13 +30,8 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*"
@@ -45,15 +40,15 @@
     "@angular-devkit/architect": "^0.1301.3",
     "@angular-devkit/core": "^13.1.3",
     "@angular-devkit/schematics": "^13.1.3",
-    "@nrwl/cli": "^13.4.4",
-    "@nrwl/devkit": "^13.4.4",
+    "@nrwl/cli": "^13.4.6",
+    "@nrwl/devkit": "^13.4.6",
     "@types/micromatch": "^4.0.2",
     "@types/picomatch": "^2.3.0",
     "@webundsoehne/deep-merge": "*",
     "change-case": "^4.1.2",
     "colorette": "^2.0.16",
     "diff": "^5.0.0",
-    "eslint": "^8.6.0",
+    "eslint": "^8.7.0",
     "execa": "^5.1.1",
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
