--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -31,19 +31,14 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "dependencies": {
     "@angular-devkit/core": "^13.1.3",
     "@angular-devkit/schematics": "^13.1.3",
-    "@nrwl/devkit": "^13.4.4",
-    "@nrwl/workspace": "^13.4.4",
+    "@nrwl/devkit": "^13.4.6",
+    "@nrwl/workspace": "^13.4.6",
     "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.6",
     "listr2": "^4.0.1"
