--- a/packages/patch-package/package.json
+++ b/packages/patch-package/package.json
@@ -34,26 +34,14 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
-  "files": [
-    "bin/",
-    "config/",
-    "dist/",
-    "patches/"
-  ],
+  "files": ["bin/", "config/", "dist/", "patches/"],
   "oclif": {
     "commands": "./dist/commands",
     "bin": "patch-package",
-    "plugins": [
-      "@oclif/plugin-help"
-    ],
+    "plugins": ["@oclif/plugin-help"],
     "hooks": {
       "init": "./dist/hooks/init.hook",
       "command_not_found": "./dist/hooks/not-found.hook",
@@ -63,10 +51,7 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "keywords": [
-    "oclif",
-    "patch-package"
-  ],
+  "keywords": ["oclif", "patch-package"],
   "dependencies": {
     "@cenk1cenk2/boilerplate-oclif": "^1.10.6",
     "@oclif/command": "^1.8.16",
@@ -85,7 +70,7 @@
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^17.0.8",
+    "@types/node": "^17.0.10",
     "@types/rewire": "^2.5.28",
     "@types/wrap-ansi": "^8.0.1"
   }
