--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -63,8 +63,8 @@
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "globby": "^11.0.3",
-    "got": "^11.8.3",
     "listr2": "^4.0.1",
+    "axios": "^0.25.0",
     "nunjucks": "^3.2.3",
     "through": "^2.3.8",
     "tslib": "^2.2.0",
