--- a/packages/brownie/templates/containers/db-mongodb/volumes.yml
+++ b/packages/brownie/templates/containers/db-mongodb/volumes.yml
@@ -5,6 +5,6 @@
   url: https://gist.githubusercontent.com/cenk1cenk2/50de15104b960128bb15ae832b8cf828/raw/mongo-initialize.sh
   mode: url
 
-- from: db
+- from: .
   to: /data/db
   mode: volume
