perf: cleans up old angular stuff auto injects to rules, adds more generators
BREAKING CHANGE: this definitely includes many breaking changes while cleaning up old nx rules to
have directly inject the three and context

--- a/packages/nx-workspace/.eslintrc
+++ b/packages/nx-workspace/.eslintrc
@@ -6,11 +6,11 @@
       {
         "pathGroups": [
           {
-            "pattern": "@{webundsoehne,webundsoehne-private,src,builders,interfaces,schematics,utils}/**",
+            "pattern": "@{webundsoehne,webundsoehne-private,src,builders,interfaces,schematics,utils,integration,constants}/**",
             "group": "index"
           },
           {
-            "pattern": "@{src,builders,interfaces,schematics,utils}",
+            "pattern": "@{src,builders,interfaces,schematics,utils,integration,constants}",
             "group": "index"
           }
         ],
