--- a/packages/nx-nest/tsconfig.json
+++ b/packages/nx-nest/tsconfig.json
@@ -6,11 +6,14 @@
     "rootDir": "src",
     "baseUrl": "src",
     "paths": {
-      "@src/*": ["*"],
       "@utils/*": ["utils/*"],
       "@integration/*": ["integration/*"],
       "@schematics/*": ["schematics/*"],
-      "@interfaces/*": ["interfaces/*"]
+      "@interfaces/*": ["interfaces/*"],
+      "@utils": ["utils"],
+      "@integration": ["integration"],
+      "@schematics": ["schematics"],
+      "@interfaces": ["interfaces"]
     }
   },
   "include": ["src"],
