--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webundsoehne/nestjs-util",
-  "version": "4.2.3",
+  "version": "1.0.0",
   "description": "NestJS skeleton util library",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
@@ -52,39 +52,31 @@
   "peerDependencies": {
     "@nestjs/common": ">= 8 < 10",
     "@nestjs/core": ">= 8 < 10",
-    "@nestjs/graphql": ">= 8 < 10",
     "@nestjs/microservices": ">= 8 < 10",
-    "@nestjs/swagger": ">= 5 < 6",
     "class-transformer": ">= 0.4.0",
     "class-validator": ">= 0.13.0",
     "fastify": ">= 3",
-    "fastify-swagger": ">= 4.0.0 < 5",
-    "graphql": ">= 15 < 16",
-    "nest-schedule": ">= 0.6.0"
+    "express": ">= 4 < 5"
+  },
+  "peerDependenciesMeta": {
+    "fastify": {
+      "optional": true
+    },
+    "express": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@nestjs/common": "^8.2.6",
     "@nestjs/core": "^8.2.6",
-    "@nestjs/graphql": "^9.1.2",
-    "@nestjs/microservices": "^8.2.6",
-    "@nestjs/swagger": "^5.2.0",
-    "@nestjs/testing": "^8.2.6",
     "@types/config": "^0.0.41",
-    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@types/winston": "^2.4.4",
-    "amqp-connection-manager": "^4.0.1",
-    "amqplib": "^0.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "concurrently": "^7.0.0",
     "fastify": "^3.27.0",
-    "fastify-swagger": "^4.13.1",
-    "graphql": "^15",
-    "nest-schedule": "^0.6.4",
-    "prettier": "^2.5.1",
-    "swagger-ui-express": "^4.1.5",
-    "wait-on": "^6.0.0"
+    "express": "^4.17.2",
+    "@types/express": "^4.17.3"
   },
   "engines": {
     "node": ">=10"
